# feishu-writing-agent

./: README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/pipelines/: readme_to_feishu.dot
backend/src/readme_to_feishu/: __init__.py  config.py  main.py  models.py
backend/src/readme_to_feishu/api/: routes.py
backend/src/readme_to_feishu/pipeline/: __init__.py  conditions.py  context.py  dot_parser.py  engine.py  graph.py  outcome.py
backend/src/readme_to_feishu/pipeline/handlers/: __init__.py  base.py  codergen.py  exit.py  start.py  tool.py
backend/src/readme_to_feishu/pipelines/: readme_to_feishu.dot
backend/src/readme_to_feishu/scripts/: publish_architecture_doc.py
backend/src/readme_to_feishu/services/: __init__.py  block_converter.py  feishu_client.py  html_parser.py  input_layer.py  llm_blog_rewrite.py  markdown_parser.py  run_pipeline.py
backend/tests/: conftest.py  test_api_convert_tasks_sse.py  test_api_fetch_readme.py  test_api_upload.py  test_integration_publish_architecture_md.py
frontend/: index.html
